<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/d_dialog_box_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:measureWithLargestChild="true"
    tools:context="pl.understandable.understandable_app.dialogs.RemoveCustomWordsSetDialog"
    android:id="@+id/d_remove_custom_words_set" >

    <TextView
        android:id="@+id/d_remove_custom_words_set_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_title_field_height"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/d_remove_custom_words_set_title"
        android:textSize="@dimen/d_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_button_field_height"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/d_remove_custom_words_set_button_no"
            android:layout_width="@dimen/button_small_small_width"
            android:layout_height="@dimen/button_small_small_height"
            android:layout_marginRight="@dimen/f_choice_button_margin"
            android:clickable="true"
            android:text="@string/button_no"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/d_remove_custom_words_set_button_yes"
            android:layout_width="@dimen/button_small_small_width"
            android:layout_height="@dimen/button_small_small_height"
            android:layout_marginLeft="@dimen/f_choice_button_margin"
            android:clickable="true"
            android:text="@string/button_yes"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text" />

    </LinearLayout>
</LinearLayout>