<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/d_dialog_box_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:measureWithLargestChild="true"
    tools:context="pl.understandable.understandable_app.dialogs.user_dialogs.UserAccountRemoveDialog"
    android:id="@+id/d_user_account_remove" >

    <LinearLayout
        android:id="@+id/d_user_account_remove_action_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/d_user_account_remove_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_title_field_height"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/d_user_account_remove_title"
            android:textSize="@dimen/d_text" />

        <TextView
            android:id="@+id/d_user_account_remove_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_title_field_height"
            android:layout_gravity="center"
            android:gravity="center | top"
            android:text="@string/d_user_account_remove_info"
            android:textSize="@dimen/d_text" />

        <EditText
            android:id="@+id/d_user_account_remove_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/f_border_margin_medium"
            android:layout_marginRight="@dimen/f_border_margin_medium"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:textSize="@dimen/d_edit_text"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_button_field_height"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@id/d_user_account_remove_action_field">

        <Button
            android:id="@+id/d_user_account_remove_button_cancel"
            android:layout_width="@dimen/button_small_small_width"
            android:layout_height="@dimen/button_small_small_height"
            android:layout_marginRight="@dimen/f_choice_button_margin"
            android:clickable="true"
            android:text="@string/button_cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/d_user_account_remove_button_approve"
            android:layout_width="@dimen/button_small_small_width"
            android:layout_height="@dimen/button_small_small_height"
            android:layout_marginLeft="@dimen/f_choice_button_margin"
            android:clickable="true"
            android:text="@string/button_approve"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text" />

    </LinearLayout>
</RelativeLayout>