<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context="pl.understandable.understandable_app.fragments.phrases.choice.PhrasesChoiceWayFragment"
    android:id="@+id/f_phrases_choice_way" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:measureWithLargestChild="true" >

        <TextView
            android:id="@+id/f_phrases_choice_way_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/f_choice_way_title"
            android:textSize="@dimen/f_text_title_medium"
            android:textColor="?attr/text_1_color" />

        <TableLayout
            android:id="@+id/f_phrases_choice_way_names_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:layout_marginRight="@dimen/f_side_margin"
            android:layout_marginLeft="@dimen/f_side_margin"
            android:orientation="horizontal"
            android:stretchColumns="*" >

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/f_phrases_choice_way_back"
                android:layout_width="@dimen/button_small_width"
                android:layout_height="@dimen/button_small_height"
                android:layout_marginRight="@dimen/f_choice_button_margin"
                android:text="@string/button_back"
                android:textSize="@dimen/button_text"
                android:textAllCaps="false"
                android:textColor="?attr/text_button_color"
                android:clickable="true" />

            <Button
                android:id="@+id/f_phrases_choice_way_submit"
                android:layout_width="@dimen/button_small_width"
                android:layout_height="@dimen/button_small_height"
                android:layout_marginLeft="@dimen/f_choice_button_margin"
                android:text="@string/button_next"
                android:textSize="@dimen/button_text"
                android:textAllCaps="false"
                android:textColor="?attr/text_button_color"
                android:clickable="true" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
