<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context="pl.understandable.understandable_app.fragments.phrases.list.PhrasesListFragment"
    android:id="@+id/f_phrases_list" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:measureWithLargestChild="true" >

        <TextView
            android:id="@+id/f_phrases_list_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/f_words_list_title"
            android:textColor="?attr/text_1_color"
            android:textSize="@dimen/f_text_title_medium" />

        <ScrollView
            android:id="@+id/f_phrases_list_scroll_view_area"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:layout_marginBottom="@dimen/f_border_margin_medium"
            android:layout_marginRight="@dimen/f_border_margin_medium"
            android:layout_marginLeft="@dimen/f_border_margin_medium" >

            <TableLayout
                android:id="@+id/f_phrases_list_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*" >

            </TableLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/f_phrases_list_button_previous"
                android:layout_width="@dimen/button_small_width"
                android:layout_height="@dimen/button_small_height"
                android:layout_marginRight="@dimen/f_choice_button_margin"
                android:text="@string/button_previous_page"
                android:textSize="@dimen/button_text"
                android:textAllCaps="false"
                android:textColor="?attr/text_button_color"
                android:clickable="true" />

            <Button
                android:id="@+id/f_phrases_list_button_next"
                android:layout_width="@dimen/button_small_width"
                android:layout_height="@dimen/button_small_height"
                android:layout_marginLeft="@dimen/f_choice_button_margin"
                android:text="@string/button_next_page"
                android:textSize="@dimen/button_text"
                android:textAllCaps="false"
                android:textColor="?attr/text_button_color"
                android:clickable="true" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
